--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -3,9 +3,17 @@
  <head>
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
+  <form method="POST" action="/team">
+      <p>Team name ('name') <input type="text" name="name"></p>
+      <p>Coach ('coach') <input type="text" name="coach"></p>
+      <p>Point Guard ('pg') <input type="text" name="pg"></p>
+      <p>Shooting Guard ('sg') <input type="text" name="sg"></p>
+      <p>Power Forward ('pf') <input type="text" name="pf"></p>
+      <p>Small Forward ('sf') <input type="text" name="sf"></p>
+      <p>Center ('c') <input type="text" name="c"></p>
+      <input type="submit" id="Submit">
+    </form>
  </head>
  <body>
  </body>
 </html>
-
-
